<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="300dp"
    android:background="#ffffff"
    android:padding="12dp">

    <com.addictedartgallery.widgets.fonts.FontTextView
        android:id="@+id/dialog_logout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:addTypeface="@string/Light"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LogOut"
        android:textColor="@android:color/tab_indicator_text"
        android:layout_alignParentTop="true"
        android:textSize="21sp"
        android:layout_marginBottom="16dp"
        />

    <com.addictedartgallery.widgets.fonts.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logOutText"
        app:addTypeface="@string/Light"
        android:textSize="18sp"
        android:layout_below="@id/dialog_logout_header"
        android:id="@+id/dialog_logout_first_text"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_logout_first_text"
        android:orientation="horizontal">

        <com.addictedartgallery.widgets.fonts.FontButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_color"
            android:layout_weight="1"
            app:setTypeface="@string/Bold"
            android:text="@string/back"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            tools:ignore="ButtonStyle"
            android:id="@+id/dialog_logout_backButton"
            />

        <com.addictedartgallery.widgets.fonts.FontButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/pink"
            android:layout_weight="1"
            android:text="@string/logout"
            app:setTypeface="@string/Bold"
            android:textColor="#ffffff"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/dialog_logout_logoutButton"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

</RelativeLayout>