<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="300dp"
    android:background="#ffffff"
    android:padding="12dp">

    <com.addictedartgallery.widgets.fonts.FontTextView
        android:id="@+id/dialog_no_artwork_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:addTypeface="@string/Bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NoArtworkHeader"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:textSize="21sp"
        android:layout_marginBottom="16dp"
        />

    <com.addictedartgallery.widgets.fonts.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:addTypeface="@string/Light"
        android:textSize="18sp"
        android:layout_below="@id/dialog_no_artwork_header"
        android:id="@+id/dialog_no_artwork_text"
        android:layout_marginBottom="16dp"/>

    <com.addictedartgallery.widgets.fonts.FontButton
        android:layout_below="@+id/dialog_no_artwork_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/pink"
        android:text="@string/Close"
        app:setTypeface="@string/Bold"
        android:textColor="#ffffff"
        android:id="@+id/dialog_no_artwork_close"
        tools:ignore="ButtonStyle" />

</RelativeLayout>