<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:scrollbars="none"
    >


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/activity_login_padding">

        <RelativeLayout
            android:id="@+id/activity_login_relative_layout"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_login_relative_layout_margin_top"
            android:padding="16dp"
            android:layout_marginBottom="@dimen/activity_login_relative_layout_margin_bottom"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_alignStart="@+id/activity_login_image_view"
            android:layout_alignLeft="@+id/activity_login_image_view"
            android:layout_alignEnd="@+id/activity_login_image_view"
            android:layout_alignRight="@+id/activity_login_image_view"
            android:background="#dddddd"
            android:layout_height="wrap_content">

            <com.addictedartgallery.widgets.fonts.FontTextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                app:addTypeface="@string/Light"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_login_relative_layout_text_size"
                android:text="@string/sign_up_using_your"
                />

            <com.addictedartgallery.widgets.fonts.FontTextView
                android:id="@+id/addicted_gallery_text"
                android:layout_width="wrap_content"
                app:addTypeface="@string/Light"
                android:layout_height="wrap_content"
                android:text="@string/addictedgallery_com"
                android:textColor="#3b5998"
                android:textSize="@dimen/activity_login_relative_layout_text_size"
                android:layout_toEndOf="@id/signupText"
                android:layout_toRightOf="@id/signupText"/>

            <com.addictedartgallery.widgets.fonts.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:addTypeface="@string/Light"
                android:text="@string/account"
                android:textSize="@dimen/activity_login_relative_layout_text_size"
                android:id="@+id/account"
                android:layout_toEndOf="@id/addicted_gallery_text"
                android:layout_toRightOf="@id/addicted_gallery_text"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/activity_login_image_view"
            android:layout_width="@dimen/login_image_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/login_image_margin_bottom"
            android:adjustViewBounds="true"
            android:layout_below="@id/activity_login_relative_layout"
            android:contentDescription="@string/content_description"
            android:src="@mipmap/logo1" />

        <com.addictedartgallery.widgets.fonts.FontEditText
            android:id="@+id/activity_login_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/email_height"
            android:background="#dddddd"
            android:hint="@string/email"
            app:typeface="@string/Light"
            android:layout_alignStart="@id/activity_login_image_view"
            android:layout_alignLeft="@id/activity_login_image_view"
            android:layout_alignEnd="@id/activity_login_image_view"
            android:layout_alignRight="@id/activity_login_image_view"
            android:inputType="textEmailAddress"
            android:paddingEnd="@dimen/email_padding_end"
            android:paddingRight="@dimen/email_padding_end"
            android:paddingStart="@dimen/email_padding_start"
            android:paddingLeft="@dimen/email_padding_start"
            android:layout_marginBottom="@dimen/email_margin_bottom"
            android:singleLine="true"
            android:layout_below="@id/activity_login_image_view"
            tools:ignore="Deprecated" />

        <com.addictedartgallery.widgets.fonts.FontEditText
            app:typeface="@string/Light"
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/password_height"
            android:layout_below="@id/activity_login_email"
            android:layout_marginBottom="@dimen/password_margin_bottom"
            android:background="#dddddd"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/password_padding_end"
            android:paddingRight="@dimen/password_padding_end"
            android:paddingStart="@dimen/password_padding_start"
            android:paddingLeft="@dimen/password_padding_start"
            android:layout_alignStart="@id/activity_login_image_view"
            android:layout_alignLeft="@id/activity_login_image_view"
            android:layout_alignEnd="@id/activity_login_image_view"
            android:layout_alignRight="@id/activity_login_image_view"
            android:singleLine="true"
            tools:ignore="Deprecated" />

        <com.addictedartgallery.widgets.fonts.FontButton
            android:id="@+id/activity_login_loginButton"
            android:layout_width="match_parent"
            app:setTypeface="@string/Bold"
            android:layout_height="@dimen/login_button_height"
            android:layout_below="@id/activity_login_password"
            android:layout_marginBottom="@dimen/login_button_margin_bottom"
            android:background="#414040"
            android:text="@string/login"
            android:layout_alignStart="@id/activity_login_image_view"
            android:layout_alignLeft="@id/activity_login_image_view"
            android:layout_alignEnd="@id/activity_login_image_view"
            android:layout_alignRight="@id/activity_login_image_view"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/activity_login_relative_layout_padding"
            android:layout_marginBottom="@dimen/second_relative_margin_bottom"
            android:layout_centerVertical="true"
            android:id="@+id/activity_login_relative_layout_second"
            android:layout_below="@id/activity_login_loginButton"
            android:layout_alignStart="@id/activity_login_image_view"
            android:layout_alignLeft="@id/activity_login_image_view"
            android:layout_alignRight="@id/activity_login_image_view"
            android:layout_alignEnd="@id/activity_login_image_view">


            <com.addictedartgallery.widgets.fonts.FontTextView
                android:id="@+id/activity_login_dont_have_account"
                android:layout_width="wrap_content"
                app:addTypeface="@string/Light"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_login_relative_layout_text_size"
                android:text="@string/if_you_don_t_have_an_addicted_gallery_account"/>

            <com.addictedartgallery.widgets.fonts.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/activity_login_dont_have_account"
                android:layout_toRightOf="@id/activity_login_dont_have_account"
                android:text="@string/sign_up"
                app:addTypeface="@string/Light"
                android:textColor="#3b5998"
                android:textSize="@dimen/activity_login_relative_layout_text_size"
                android:id="@+id/activity_login_sign_up"/>



        </RelativeLayout>

        <com.addictedartgallery.widgets.fonts.FontButton
            app:setTypeface="@string/Bold"
            android:id="@+id/activity_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_alignStart="@id/activity_login_image_view"
            android:layout_alignLeft="@id/activity_login_image_view"
            android:layout_alignRight="@id/activity_login_image_view"
            android:layout_alignEnd="@id/activity_login_image_view"
            android:background="#3b5998"
            android:textColor="@android:color/white"
            android:drawableStart="@mipmap/ic_facebook_box_white_36dp"
            android:drawableLeft="@mipmap/ic_facebook_box_white_36dp"
            android:paddingStart="@dimen/facebook_padding_start"
            android:paddingLeft="@dimen/facebook_padding_start"
            android:paddingEnd="@dimen/facebook_padding_end"
            android:paddingRight="@dimen/facebook_padding_end"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:layout_below="@id/activity_login_relative_layout_second"
            tools:targetApi="jelly_bean_mr1" />


    </RelativeLayout>
</ScrollView>